[gd_scene load_steps=7 format=3 uid="uid://blspj1uih5msk"]

[ext_resource type="Script" path="res://addons/ridiculous_stream/instances/wn_settings.gd" id="1_vldws"]
[ext_resource type="PackedScene" uid="uid://gi6k83qtu4y2" path="res://addons/ridiculous_stream/instances/pnl_rs_setting.tscn" id="2_7ru31"]
[ext_resource type="PackedScene" uid="uid://cmm5f6140s4jm" path="res://addons/ridiculous_stream/instances/pnl_test.tscn" id="4_gjljo"]
[ext_resource type="PackedScene" uid="uid://cqlaadcvsfhpq" path="res://addons/ridiculous_stream/instances/pnl_twitch_user_list.tscn" id="4_t5th0"]
[ext_resource type="PackedScene" uid="uid://dc02d6u648u1j" path="res://addons/ridiculous_stream/instances/pnl_twitch_user_fields.tscn" id="5_qnlvo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp5vt"]
bg_color = Color(0.211765, 0.239216, 0.290196, 1)

[node name="wn_settings" type="Window"]
disable_3d = true
title = "Ridiculous Stream Settings"
position = Vector2i(0, 36)
size = Vector2i(1640, 800)
transient = true
popup_window = true
max_size = Vector2i(2048, 2048)
keep_title_visible = true
script = ExtResource("1_vldws")

[node name="bg" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dp5vt")

[node name="pnl" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="vb" type="VBoxContainer" parent="pnl"]
layout_mode = 2

[node name="hsplit" type="HSplitContainer" parent="pnl/vb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="vsplit" type="VSplitContainer" parent="pnl/vb/hsplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="pnl_rs_settings" parent="pnl/vb/hsplit/vsplit" instance=ExtResource("2_7ru31")]
unique_name_in_owner = true
layout_mode = 2

[node name="pnl_test" parent="pnl/vb/hsplit/vsplit" instance=ExtResource("4_gjljo")]
unique_name_in_owner = true
layout_mode = 2

[node name="hsplit" type="HSplitContainer" parent="pnl/vb/hsplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5

[node name="pnl_twitch_user_list" parent="pnl/vb/hsplit/hsplit" instance=ExtResource("4_t5th0")]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.4

[node name="pnl_twitch_user_fields" parent="pnl/vb/hsplit/hsplit" instance=ExtResource("5_qnlvo")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="bot" type="HBoxContainer" parent="pnl/vb"]
layout_mode = 2

[node name="btn_hot_reload" type="Button" parent="pnl/vb/bot"]
layout_mode = 2
text = "Re-instatiate window"

[node name="btn_credits" type="Button" parent="pnl/vb/bot"]
layout_mode = 2
size_flags_horizontal = 3
text = "Gift has been made by Issork - here's the link"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="pnl/vb/bot/btn_hot_reload" to="." method="_on_btn_hot_reload_pressed"]
[connection signal="pressed" from="pnl/vb/bot/btn_credits" to="." method="_on_btn_credits_pressed"]
